# BalancesSerial

./: .gitignore  BalanceCalculator.cpp  BalanceCalculator.h  BalanceCalculatorParallel.cpp  BalanceCalculatorParallel.h  CMakeLists.txt  main.cpp  matrix_inverse.cpp  matrix_inverse.h  task.txt.example
